Revision history for Dist-Zilla-App-Command-update

{{$NEXT}}

0.04  2014-12-28 14:01:33 PST
    - Support --trial to build a trial release

0.03  2014-10-17 22:35:08 PDT
    - Tidier (& faster?) updating.  Thanks, Karen Etheridge!

0.02  2014-10-16 22:57:06 PDT
    - Declare prereq!

0.01  2014-10-12 17:26:08 PDT
        - Initial release